[package]
name = "rconn"
version = "0.1.0"
edition = "2021"
authors = ["Majjcom"]
description = "A simple network protocol."
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/Majjcom/rconn"
repository = "https://github.com/Majjcom/rconn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
once_cell = "1.18"
