[package]
name = "rconn"
version = "1.0.0"
edition = "2021"
authors = ["Majjcom"]
description = "A simple network protocol."
license-file = "LICENSE"
homepage = "https://github.com/Majjcom/rconn"
repository = "https://github.com/Majjcom/rconn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
log = "0.4"
tokio = { version = "1.44", features = ["full"] }
sha2 = "0.10"
aes = "0.8"
rand = "0.9"
